Ajout dossier code source de l'Arduino

--- a/entrainement/OpenCV/index.html
+++ b/entrainement/OpenCV/index.html
@@ -9,13 +9,13 @@
     <p id="status">OpenCV.js is loading...</p>
     <div>
         <div class="inputoutput">
-            <img id="imageSrc" alt="No Image" src="img/boules.jpg"/>
+<!--            <img id="imageSrc" alt="No Image" src="img/boules.jpg"/>-->
 
-            <video autoplay loop muted id="videoInput" width="1024" height="576" src="video/videoplayback.mp4"></video>
+            <video autoplay loop muted id="videoInput" width="854" height="480" src="video/videoplayback.mp4"></video>
         </div>
         <div class="inputoutput">
-            <canvas id="canvasOutput" ></canvas>
-            <div class="caption">canvasOutput</div>
+            <!--<canvas id="canvasOutput" ></canvas>
+            <div class="caption">canvasOutput</div>-->
 
             <div class="caption">canvasOutputVideo</div>
             <canvas id="canvasOutputVideo" ></canvas>
