Prototype serveur node.js + envoie de requête au robot par l'onglet manuel

--- a/production/index_prototype.html
+++ b/production/index_prototype.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/index.css"/>
     <title>Robot Billard</title>
+
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
     <h1 id="titre">Robot Billard joueur de Football</h1>
