--- a/entrainement/OpenCV/index.html
+++ b/entrainement/OpenCV/index.html
@@ -12,6 +12,7 @@
 <!--            <img id="imageSrc" alt="No Image" src="img/boules.jpg"/>-->
 
             <video autoplay loop muted id="videoInput" width="854" height="480" src="video/videoplayback.mp4"></video>
+<!--            <video muted id="videoInput" width="854" height="480" src=""></video>-->
         </div>
         <div class="inputoutput">
             <!--<canvas id="canvasOutput" ></canvas>
@@ -25,5 +26,6 @@
 <script async src="lib/openCV.js" type="text/javascript"></script>
 <!--<script src="scripts/image.js" type="text/javascript"></script>-->
 <script src="scripts/video.js" type="text/javascript"></script>
+<script src="scripts/camera.js" type="text/javascript"></script>
 <!--<script src="scripts/index.js" type="module"></script>-->
 </html>
