--- a/production/index_prototype.html
+++ b/production/index_prototype.html
@@ -18,7 +18,7 @@
                 <button class="btns-vue" id="manuel">Manuel</button>
             </div>
             <div id="canvas-container">
-                <canvas height="400" width="700">...</canvas>
+                <canvas id="canvasOutputVideo"></canvas>
             </div>
         </div>
 
@@ -65,6 +65,8 @@
         </p>
     </footer>
 
-    <script src="index.js"></script>
+    <script async src="lib/openCV.js" type="text/javascript"></script>
+    <script src="js/index.js"></script>
+    <script src="js/video.js" type="text/javascript"></script>
 </body>
 </html>
