--- a/production/index_prototype.html
+++ b/production/index_prototype.html
@@ -39,6 +39,9 @@
         </div>
 
         <div class="partie displayNone" id="partie-droite-manuel">
+
+            <input type="range" id="curseurMoteurGauche" orient="vertical" min="0" max="255">
+
             <div id="grid-boutons-manuel">
                 <button class="fleche" id="btn-avancer">
                     <svg width="96" height="96" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" overflow="hidden"><g transform="translate(-626 -133)"><path d="M677.031 221.951 677.031 147.192 685.931 156.092C687.091 157.252 688.971 157.252 690.131 156.092 691.291 154.932 691.291 153.052 690.131 151.892L676.131 137.9C675.026 136.74 673.191 136.695 672.031 137.8 671.997 137.833 671.964 137.866 671.931 137.9L657.941 151.89C656.781 152.995 656.736 154.83 657.841 155.99 657.873 156.024 657.907 156.057 657.941 156.09 659.046 157.25 660.881 157.295 662.041 156.19 662.075 156.158 662.109 156.124 662.141 156.09L671.036 147.195 671.036 221.951C671.036 223.608 672.379 224.951 674.036 224.951 675.693 224.951 677.036 223.608 677.036 221.951Z"/></g></svg>
@@ -53,7 +56,12 @@
                     <svg width="96" height="96" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" overflow="hidden"><g transform="translate(-626 -341)"><path d="M670.981 348.05 670.981 422.809 662.081 413.914C660.921 412.754 659.041 412.754 657.881 413.914 656.721 415.074 656.721 416.954 657.881 418.114L671.881 432.1C672.986 433.26 674.821 433.305 675.981 432.2 676.015 432.168 676.049 432.134 676.081 432.1L690.071 418.112C691.231 417.007 691.276 415.172 690.171 414.012 690.138 413.978 690.105 413.945 690.071 413.912 688.966 412.752 687.131 412.707 685.971 413.812 685.937 413.844 685.904 413.878 685.871 413.912L676.976 422.807 676.976 348.05C676.976 346.393 675.633 345.05 673.976 345.05 672.319 345.05 670.976 346.393 670.976 348.05Z"/></g></svg>
                 </button>
             </div>
+
+            <input type="range" id="curseurMoteurDroit" orient="vertical" min="0" max="255">
+
         </div>
+
+        <input type="number" id="inputDuration" min="10" max="10000">
 
     </main>
 
