--- a/production/index_prototype.html
+++ b/production/index_prototype.html
@@ -6,12 +6,12 @@
     <title>Robot Billard</title>
 
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/matter-js@0.17.1/build/matter.min.js"></script>
 </head>
 <body>
     <h1 id="titre">Robot Billard joueur de Football</h1>
 
     <main>
-
         <!-- Partie Gauche contenant le canvas ainsi que les boutons permettant de changer de vue -->
 
         <div class="partie displayFlex" id="partie-gauche">
@@ -98,7 +98,7 @@
     </footer>
 
     <script async src="lib/openCV.js" type="text/javascript"></script>
-    <script src="js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
     <script src="js/video.js" type="text/javascript"></script>
 </body>
 </html>
