Ajout détection d'aruco dans opencv

--- a/entrainement/OpenCV/index.html
+++ b/entrainement/OpenCV/index.html
@@ -6,8 +6,13 @@
     </head>
     <body>
         <h2>Hello OpenCV.js</h2>
-        <canvas id="canvasOutputVideo"></canvas>
-    </body>
-    <script async src="lib/openCV.js" type="text/javascript"></script>
-    <script src="scripts/video.js" type="text/javascript"></script>
+
+        <img id="imageSrc" alt="No Image" src="img/arucos.png"/>
+        <canvas id="canvasOutput" ></canvas>
+
+<canvas id="canvasOutputVideo"></canvas>
+</body>
+<script async src="lib/opencv.js" type="text/javascript"></script>
+<!--<script src="scripts/video.js" type="text/javascript"></script>-->
+<script src="scripts/image.js" type="text/javascript"></script>
 </html>
