Ajout d'une configuration billard, renommage du fichier index.html, ajout favicon.ico, ajout de la librairie matter.js dans le dossier lib

--- a/production/simulateur/index_simulateur.html
+++ b/production/simulateur/index_simulateur.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
 
         <script type="module" src="main.js" defer></script>
-        <script src="https://cdn.jsdelivr.net/npm/matter-js@0.17.1/build/matter.min.js"></script>
+        <script src="../lib/matter_0.17.0.js"></script>
     </head>
 
     <body>
