--- a/production/index.html
+++ b/production/index.html
@@ -6,7 +6,7 @@
     <title>Robot Billard</title>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/matter-js@0.17.1/build/matter.min.js"></script>
+    <script src="lib/matter_0.17.0.js"></script>
 </head>
 <body>
     <h1 id="titre">Robot Billard joueur de Football</h1>
