ajout d'un peu de responsivité sur index.html

--- a/production/index.html
+++ b/production/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
 
-<!--    <div id="conteneur-boutons">-->
+    <header>
         <div id="liste-boutons">
             <button class="btns-vue" id="camera">Caméra</button>
             <button class="btns-vue" id="simulateur">Simulateur</button>
             <button class="btns-vue" id="manuel">Manuel</button>
         </div>
-<!--    </div>-->
+        <h4 id="titre">Robot Billard joueur de Football</h4>
+    </header>
 
-    <h4 id="titre">Robot Billard joueur de Football</h4>
 
     <main>
         <!-- Partie Gauche contenant le canvas ainsi que les boutons permettant de changer de vue -->
