--- a/production/index.html
+++ b/production/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/index.css"/>
+    <link rel="icon" type="image/png" href="./img/favicon.png">
     <title>Robot Billard</title>
 
     <script src="/socket.io/socket.io.js"></script>
