ajout d'un bouton de rechargement de la simulation

--- a/production/index.html
+++ b/production/index.html
@@ -29,6 +29,7 @@
             <div id="canvas-container">
                 <canvas id="canvasOutputVideo"></canvas>
             </div>
+            <button class="displayNone" id="btn-recharger">Recharger</button>
         </div>
 
 
