Détection des arucos dans le flux vidéo * Bug : L'image est en noir et blanc

--- a/entrainement/OpenCV/index.html
+++ b/entrainement/OpenCV/index.html
@@ -7,7 +7,7 @@
     <body>
         <h2>Hello OpenCV.js</h2>
 
-        <img id="imageSrc" alt="No Image" src="img/arucos.png"/>
+        <img id="imageSrc" alt="No Image" src="img/aruco-marker-ID=844.png"/>
         <canvas id="canvasOutput" ></canvas>
 
 <canvas id="canvasOutputVideo"></canvas>
