--- a/production/index.html
+++ b/production/index.html
@@ -5,17 +5,14 @@
     <link rel="stylesheet" href="css/index.css"/>
     <link rel="icon" type="image/png" href="./img/favicon.png">
     <title>Robot Billard</title>
-
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="lib/matter_0.17.0.js"></script>
 </head>
 <body>
 
-<!--    <div class="loader-container">-->
-<!--        <div class="loader">-->
-<!--            <div class="inner-circle"></div>-->
-<!--        </div>-->
-<!--    </div>-->
+    <div id="loader-container">
+        <div class="loader">
+            <div class="inner-circle"></div>
+        </div>
+    </div>
 
     <header>
         <div id="views-list">
@@ -94,8 +91,10 @@
         </p>
     </footer>
 
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="lib/matter_0.17.0.js"></script>
     <script async src="lib/openCV.js" type="text/javascript"></script>
-    <script type="module" src="js/index.js"></script>
     <script src="js/video.js" type="text/javascript"></script>
+    <script type="module" src="js/index.js"></script>
 </body>
 </html>
