--- a/production/index.html
+++ b/production/index.html
@@ -94,7 +94,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="lib/matter_0.17.0.js"></script>
     <script async src="lib/openCV.js" type="text/javascript"></script>
-    <script src="js/video.js" type="text/javascript"></script>
+    <script type="module" src="js/video.js"></script>
     <script type="module" src="js/index.js"></script>
 </body>
 </html>
