--- a/production/index.html
+++ b/production/index.html
@@ -26,7 +26,16 @@
     <main>
         <!-- Left part which contains canvas and buttons to change view -->
         <div class="part displayFlex" id="left-part">
-            <button class="displayNone" id="reload-btn">Recharger</button>
+            <div class="displayNone" id="top-table-container">
+                <button id="reload-btn">Recharger</button>
+                <select name="scenarios" id="select-configuration">
+                    <option value="default" class="option-scenarios">Choissez une configuration</option>
+                    <option value="Billard" class="option-scenarios">Billard</option>
+                    <option value="Foot" class="option-scenarios">Foot</option>
+                    <option value="Facile" class="option-scenarios">Facile</option>
+                    <option value="Autre" class="option-scenarios">Autre</option>
+                </select>
+            </div>
             <div id="canvas-container">
                 <canvas class="displayFlex" id="canvas-output-video"></canvas>
             </div>
