SIMULATEUR - SITE : fontionnalité de choix de la configuration du simulateur

--- a/production/index.html
+++ b/production/index.html
@@ -30,6 +30,7 @@
                 <button id="reload-btn">Recharger</button>
                 <select name="scenarios" id="select-configuration">
                     <option value="default" class="option-scenarios">Choissez une configuration</option>
+                    <option value="Random" class="option-scenarios">Random</option>
                     <option value="Billard" class="option-scenarios">Billard</option>
                     <option value="Foot" class="option-scenarios">Foot</option>
                     <option value="Facile" class="option-scenarios">Facile</option>
