--- a/production/index.html
+++ b/production/index.html
@@ -29,12 +29,10 @@
             <div class="displayNone" id="top-table-container">
                 <button id="reload-btn">Recharger</button>
                 <select name="scenarios" id="select-configuration">
-                    <option value="default" class="option-scenarios">Choissez une configuration</option>
-                    <option value="Random" class="option-scenarios">Random</option>
+                    <option value="Random" class="option-scenarios" selected>Random</option>
                     <option value="Billard" class="option-scenarios">Billard</option>
                     <option value="Foot" class="option-scenarios">Foot</option>
                     <option value="Facile" class="option-scenarios">Facile</option>
-                    <option value="Autre" class="option-scenarios">Autre</option>
                 </select>
             </div>
             <div id="canvas-container">
