(Feature) video.js : * Show and get the direction ArUcos are facing * Differenciate the balls that are inside or outside the table
(Refactor) video.js :
* Refactored video.js, mostly moved the steps of frame processing
  in multiple functions

(Addition) videos : Added some videos and some lines of codes to work without the camera

--- a/production/index.html
+++ b/production/index.html
@@ -36,6 +36,7 @@
             </select>
         </div>
         <div id="canvas-container">
+<!--            <video autoplay loop muted id="canvas-input-video" width="700" height="400" src="./video/aruco.mp4"></video>-->
             <canvas class="displayFlex" id="canvas-output-video"></canvas>
         </div>
     </div>
