FIX : update de l'écran de chargement et de la photo de remplacement

--- a/production/index.html
+++ b/production/index.html
@@ -10,7 +10,9 @@
 
 <div id="loader-container">
     <div class="loader">
-        <div class="inner-circle"></div>
+        <div class="inner-circle">
+            <img src="img/ball8.png">
+        </div>
     </div>
 </div>
 
