--- a/production/index.html
+++ b/production/index.html
@@ -31,8 +31,8 @@
         <div id="top-table-container">
             <button id="reload-btn" class="displayNone">Recharger</button>
             <select name="scenarios" id="select-configuration" class="select-top-table-container displayNone">
-                <option value="Random" class="option" selected>Random</option>
-                <option value="Billard" class="option">Billard</option>
+                <option value="Random" class="option">Random</option>
+                <option value="Billard" class="option" selected>Billard</option>
                 <option value="Foot" class="option">Foot</option>
                 <option value="Facile" class="option">Facile</option>
             </select>
@@ -97,7 +97,7 @@
             <div class="div-choice">
                 <p class="text-up-to-select">Scénarios :</p>
                 <select name="scenarios" id="select-scenarios">
-                    <option value="default" class="option">Choissez un scénario</option>
+                    <option value="default" class="option">Test</option>
                     <option value="Billard" class="option">Billard</option>
                     <option value="Autre" class="option">Autre</option>
                 </select>
