SIMULATEUR: Selection d'un robot specifique à controler

--- a/production/index.html
+++ b/production/index.html
@@ -41,6 +41,10 @@
                     <!-- here some robots which are available to control (added with javascript) -->
                     <option value="default" class="option">Aucun robot disponible</option>
                 </select>
+
+                <select name="robots" id="select-robot-sim" class="select-top-table-container displayNone">
+                    <option value="default" class="option">Aucun robot disponible</option>
+                </select>
             </div>
         </div>
         <div id="canvas-container">
