--- a/production/index.html
+++ b/production/index.html
@@ -124,4 +124,5 @@
 <script type="module" src="js/video.js"></script>
 <script type="module" src="js/index.js"></script>
 </body>
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 </html>
