--- a/production/index.html
+++ b/production/index.html
@@ -51,8 +51,8 @@
             <!--            <input type="number" id="tmp-1" min="10" max="300" step="10" value="100">-->
             <!--            <input type="number" id="tmp-2" min="100" max="10000" step="100" value="1000">-->
             <!--                        <video autoplay loop muted id="canvas-input-video" width="700" height="400" src="./video/aruco.mp4"></video>-->
-            <canvas class="displayFlex" id="canvas-output-video"></canvas>
-            <video autoplay loop muted id="canvas-input-video" width="350" height="200" src="./video/aruco.mp4"></video>
+            <canvas class="canvas-video displayFlex" id="canvas-output-video"></canvas>
+            <canvas class="canvas-video displayFlex" id="canvas-output-video-brut"></canvas>
         </div>
     </div>
 
