(Feature / Bugfix) brain.js / index.js / server.js : Le robot tourne ENFIN de manière optimale tout le temps !!!! + bouton broadcast

--- a/production/index.html
+++ b/production/index.html
@@ -29,6 +29,9 @@
     <!-- Left part which contains canvas and buttons to change view -->
     <div class="part displayFlex" id="left-part">
         <div id="top-table-container">
+            <label for="checkbox-allRobots">broadcast</label>
+            <input type="checkbox" id="checkbox-allRobots" name="allRobots"/>
+
             <button id="reload-btn" class="displayNone">Recharger</button>
             <select name="scenarios" id="select-configuration" class="select-top-table-container displayNone">
                 <option value="Random" class="option">Random</option>
