FONCTIONNALUTE : ajout d'un bouton pour choisir l'affichage, avec ou sans les détections (vue camera)

--- a/production/index.html
+++ b/production/index.html
@@ -29,8 +29,10 @@
     <!-- Left part which contains canvas and buttons to change view -->
     <div class="part displayFlex" id="left-part">
         <div id="top-table-container">
-            <label for="checkbox-allRobots">broadcast</label>
-            <input type="checkbox" id="checkbox-allRobots" name="allRobots"/>
+            <div class="checkbox">
+                <label for="checkbox-allRobots">Broadcast</label>
+                <input type="checkbox" id="checkbox-allRobots" class="input-checkbox" name="allRobots"/>
+            </div>
 
             <button id="reload-btn" class="displayNone">Recharger</button>
             <select name="scenarios" id="select-configuration" class="select-top-table-container displayNone">
@@ -49,13 +51,18 @@
                     <option value="default" class="option">Aucun robot disponible</option>
                 </select>
             </div>
+
+            <div class="checkbox">
+                <label for="checkbox-affichage">Affichage</label>
+                <input type="checkbox" id="checkbox-affichage" class="input-checkbox" name="affichage"/>
+            </div>
         </div>
         <div id="canvas-container">
             <!--            <input type="number" id="tmp-1" min="10" max="300" step="10" value="100">-->
             <!--            <input type="number" id="tmp-2" min="100" max="10000" step="100" value="1000">-->
             <!--                        <video autoplay loop muted id="canvas-input-video" width="700" height="400" src="./video/aruco.mp4"></video>-->
             <canvas class="canvas-video displayFlex" id="canvas-output-video-brut"></canvas>
-            <canvas class="canvas-video displayFlex" id="canvas-output-video"></canvas>
+            <canvas class="canvas-video displayNone" id="canvas-output-video"></canvas>
         </div>
     </div>
 
