Affichage du slider de vitesse uniquement en simulateur

--- a/production/index.html
+++ b/production/index.html
@@ -52,7 +52,7 @@
                 </select>
             </div>
 
-            <div class="param">
+            <div class="param displayNone">
                 <label for="checkbox-affichage">Affichage</label>
                 <input type="checkbox" id="checkbox-affichage" class="input-checkbox" name="affichage"/>
             </div>
