REFACTORING : debut refactoring

--- a/production/index.html
+++ b/production/index.html
@@ -134,7 +134,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="lib/matter_0.17.0.js"></script>
 <script async src="lib/openCV.js" type="text/javascript"></script>
-<script type="module" src="js/video.js"></script>
+<script type="module" src="js/video/video.js"></script>
 <script type="module" src="js/index.js"></script>
 </body>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
