--- a/production/index.html
+++ b/production/index.html
@@ -54,7 +54,7 @@
 
             <div class="param">
                 <label for="checkbox-affichage">Affichage</label>
-                <input type="checkbox" id="checkbox-affichage" class="input-checkbox" name="affichage"/>
+                <input type="checkbox" id="checkbox-affichage" class="input-checkbox" name="affichage" checked/>
             </div>
 
             <div id="speed-container" class="param displayNone">
@@ -67,8 +67,8 @@
             <!--            <input type="number" id="tmp-1" min="10" max="300" step="10" value="100">-->
             <!--            <input type="number" id="tmp-2" min="100" max="10000" step="100" value="1000">-->
             <!--                        <video autoplay loop muted id="canvas-input-video" width="700" height="400" src="./video/aruco.mp4"></video>-->
-            <canvas class="canvas-video displayFlex" id="canvas-output-video-brut"></canvas>
-            <canvas class="canvas-video displayNone" id="canvas-output-video"></canvas>
+            <canvas class="canvas-video displayNone" id="canvas-output-video-brut"></canvas>
+            <canvas class="canvas-video displayFlex" id="canvas-output-video"></canvas>
         </div>
     </div>
 
