FIX : détails optimisation

--- a/production/index.html
+++ b/production/index.html
@@ -116,7 +116,7 @@
                 <p class="text-up-to-select">Scénarios :</p>
                 <select name="scenarios" id="select-scenarios">
                     <option value="default" class="option">Test</option>
-                    <option value="Billard" class="option">Billard</option>
+                    <option value="Billard" class="option">Billard Simple</option>
                 </select>
             </div>
         </div>
