(Refactor) brain.js : Made a new folder for brain, and a file containing constants such as robot's max speed (Upgrade) brain.js : The robot moves more smoothly and smartly

--- a/production/index.html
+++ b/production/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="./css/index.css"/>
     <link rel="icon" type="image/png" href="./img/favicon.png">
     <title>Robot Billard</title>
 </head>
@@ -11,7 +11,7 @@
 <div id="loader-container">
     <div class="loader">
         <div class="inner-circle">
-            <img src="img/ball8.png">
+            <img src="./img/ball8.png" alt="Ecran de chargement">
         </div>
     </div>
 </div>
@@ -132,10 +132,10 @@
 </footer>
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="lib/matter_0.17.0.js"></script>
-<script async src="lib/openCV.js" type="text/javascript"></script>
-<script type="module" src="js/video/video.js"></script>
-<script type="module" src="js/index.js"></script>
+<script src="./lib/matter_0.17.0.js"></script>
+<script async src="./lib/openCV.js" type="text/javascript"></script>
+<script type="module" src="./js/video/video.js"></script>
+<script type="module" src="./js/index.js"></script>
 </body>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </html>
