--- a/production/simulateur/index_simulateur.html
+++ b/production/simulateur/index_simulateur.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr-FR">
-    <head>
-        <meta charset="utf-8">
+<head>
+    <meta charset="utf-8">
 
-        <script type="module" src="main.js" defer></script>
-        <script src="../lib/matter_0.17.0.js"></script>
-    </head>
+    <script type="module" src="./main.js" defer></script>
+    <script src="../lib/matter_0.17.0.js"></script>
+</head>
 
-    <body>
-        <div id="canvas-container"></div>
-    </body>
+<body>
+<div id="canvas-container"></div>
+</body>
 </html>
