Refactor et meilleure arrangement des ajouts d'events

--- a/production/index.html
+++ b/production/index.html
@@ -58,7 +58,7 @@
             </div>
 
             <div id="speed-container" class="param displayNone">
-                <input type="range" id="sim-speed" min="0" max="2" value="1"
+                <input type="range" id="sim-speed" min="0" max="2.0" value="1" step="0.1"
                        oninput="this.nextElementSibling.value = this.value">
                 <output>1</output>
             </div>
