(Refactor / bugfix) scenarios : test scenario works, common scenario functions got exported to a file, made simple and comlpex billard scenarios

--- a/production/index.html
+++ b/production/index.html
@@ -111,7 +111,8 @@
                 <p class="text-up-to-select">Scénarios :</p>
                 <select name="scenarios" id="select-scenarios">
                     <option value="default" class="option">Test</option>
-                    <option value="Billard" class="option">Billard Simple</option>
+                    <option value="SimpleBillard" class="option">Billard Simple</option>
+                    <option value="ComplexBillard" class="option">Billard Complexe</option>
                 </select>
             </div>
         </div>
