FONCTIONNALITE : garder le robot courant lors du changement de mode de jeu sur le simulateur

--- a/production/index.html
+++ b/production/index.html
@@ -39,7 +39,7 @@
             <div>
                 <select name="robots" id="select-robot" class="select-top-table-container displayFlex">
                     <!-- here some robots which are available to control (added with javascript) -->
-                    <option value="default" class="option">Aucun robot disponible</option>
+                    <option value="default" class="option" selected>Broadcast</option>
                 </select>
 
                 <select name="robots" id="select-robot-sim" class="select-top-table-container displayNone">
