(Feature) simulateur : Added a configuration for a table filled with balls, and circles near holes are not detected anymore

--- a/production/index.html
+++ b/production/index.html
@@ -32,6 +32,7 @@
             <button id="reload-btn" class="displayNone">Recharger</button>
             <select name="scenarios" id="select-configuration" class="select-top-table-container displayNone">
                 <option value="Random" class="option">Random</option>
+                <option value="Filled" class="option">Remplie</option>
                 <option value="Billard" class="option" selected>Billard</option>
                 <option value="Foot" class="option">Foot</option>
                 <option value="Facile" class="option">Facile</option>
