--- a/production/index.html
+++ b/production/index.html
@@ -24,21 +24,11 @@
             <img src="./img/croix.png" alt="croix de fermeture" id="croix">
         </div>
         <div id="options-list">
-            <button id="reload-btn" class="param displayNone">Recharger</button>
-
             <div class="param">
                 <label for="checkbox-affichage">Affichage</label>
                 <input type="checkbox" id="checkbox-affichage" class="input-checkbox" name="affichage" checked/>
             </div>
-
-            <select name="scenarios" id="select-configuration" class="select-top-table-container displayNone">
-                <option value="Billard" class="option" selected>Billard</option>
-                <option value="Random" class="option">Random</option>
-                <option value="Filled" class="option">Remplie</option>
-                <option value="Foot" class="option">Foot</option>
-                <option value="Facile" class="option">Facile</option>
-            </select>
-
+            
             <select name="robots" id="select-robot" class="select-top-table-container displayFlex">
                 <!-- here some robots which are available to control (added with javascript) -->
                 <option value="default" class="option" selected>Broadcast</option>
@@ -78,7 +68,20 @@
     <!-- Left part which contains canvas and buttons to change view -->
     <div class="part displayFlex" id="left-part">
 
-        <button id="btn-options" class="param">Options</button>
+
+        <div id="visible-options">
+            <button id="reload-btn" class="param displayNone">Recharger</button>
+
+            <select name="scenarios" id="select-configuration" class="select-top-table-container displayNone">
+                <option value="Billard" class="option" selected>Billard</option>
+                <option value="Random" class="option">Random</option>
+                <option value="Filled" class="option">Remplie</option>
+                <option value="Foot" class="option">Foot</option>
+                <option value="Facile" class="option">Facile</option>
+            </select>
+            <button id="btn-options" class="param">Options supplémentaires</button>
+        </div>
+
 
         <div id="canvas-container">
             <!-- <input type="number" id="tmp-1" min="10" max="300" step="10" value="100"> -->
